--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@ Level 1: HTML and CSS only practice site titled "Abstract"-->
 </head>
 <body>
     <div class="wrapper">
-        <header></header>
+        <header>
+            <div class="left-nav">
+                <ul class="visitor">
+                    <li>
+                        <img style="height: 30px; width: 30px; " src="https://www.svgrepo.com/show/449791/instagram.svg" alt="logo"/>
+                    </li>
+                    <li>
+                        <a href="#"><h3 class="company">Abstract</h3></a>
+                    </li>
+                    <li>
+                        <a href="#"><h3 style="font-weight: 100;" class="help-center">Help Center</h3></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="right-nav">
+                <ul>
+                    <li class="request">
+                        <button>Submit a request</button>
+                    </li>
+                    <li class="login">
+                        <button>Sign in</button>
+                    </li>
+                </ul>
+            </div>
+        </header>
         <section class="search">
             <div class="search_inner">
                 <div class="title">
@@ -91,7 +115,51 @@ Level 1: HTML and CSS only practice site titled "Abstract"-->
                 </div>
             </div>
         </section>
-        <footer> <button>help</button></footer>
+        <footer> 
+            <button><img style="width: 20px; height: 20px; padding-right: 3px;"src="https://www.svgrepo.com/show/489580/question-mark-circle.svg"/>Help</button>
+            <div>
+                <ul class="foot_nav">
+                    <li><h2>Abstract</h2>
+                        <ul class="sub_nav">
+                            <li>Start Trial</li>
+                            <li>Pricing</li>
+                            <li>Download</li>
+                        </ul>
+                    </li>
+                    <li><h2>Resources</h2>
+                        <ul class="sub_nav">
+                            <li>Blog</li>
+                            <li>Help Center</li>
+                            <li>Release Notes</li>
+                            <li>Status</li>
+                        </ul>
+                    </li>
+                    <li><h2>Community</h2>
+                        <ul class="sub_nav">
+                            <li>Twitter</li>
+                            <li>LinkedIn</li>
+                            <li>Facebook</li>
+                            <li>Dribble</li>
+                            <li>Podcast</li>
+                        </ul>
+                    </li>
+                    <li><h2>Company</h2>
+                        <ul class="sub_nav">
+                            <li>About Us</li>
+                            <li>Careers</li>
+                            <li>Legal</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <img style="height: 30px; width: 30px; " src="https://www.svgrepo.com/show/449791/instagram.svg"/>
+                <p><img style="height: 15px; width: 15px; " src="https://icons8.com/icon/88661/copyright"/>Copyright 2023</p>
+                <p>Abstract Studio Design, Inc.</p>
+                <p>All rights reserved</p>
+
+            </div>
+        </footer>
     </div>
 </body>
 </html>
