--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Level 1: HTML and CSS only practice site titled "Abstract"-->
                 <div class="search_box">
                     <form class="search_form" role="search">
                         <input type="search" class="search_input" name="search" placeholder="Search this site" spellcheck="true"/>
-                        <input value="Submit" type="submit"/>
+                        <input value="→" type="submit"/>
                     </form>
                 </div>
             </div>
